17.10.2018 (a_0.1) - Eirik Hemstad
--------------------------
Initial revision