@@ -1,3 +1,4 @@
 17.10.2018 (a_0.1) - Eirik Hemstad
 --------------------------
 Initial revision
+Added method structure and variables
